{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 29,
  "lineage": "032797a0-afe4-5978-0a77-fa432cf350ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mahesh-Internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815057191380:internet-gateway/igw-04aa4eda9c57086f6",
            "id": "igw-04aa4eda9c57086f6",
            "owner_id": "815057191380",
            "vpc_id": "vpc-0bb6adfe80f639d56"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb-mahesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:815057191380:loadbalancer/app/Mahesh11907444/c3fb04e00a12849b",
            "arn_suffix": "app/Mahesh11907444/c3fb04e00a12849b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Mahesh11907444-864748322.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:815057191380:loadbalancer/app/Mahesh11907444/c3fb04e00a12849b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Mahesh11907444",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0747381e123ddd9d8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ec8bbbce9871a3cd"
              },
              {
                "subnet_id": "subnet-0f9dd9aa57078ea75"
              }
            ],
            "subnets": [
              "subnet-0ec8bbbce9871a3cd",
              "subnet-0f9dd9aa57078ea75"
            ],
            "vpc_id": "vpc-0bb6adfe80f639d56",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.mahesh-sg",
            "aws_subnet.pub-sub1-mahesh",
            "aws_subnet.pub-sub2-mahesh",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-elb-mahesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:815057191380:targetgroup/Mahesh11907444/c32ba3d60be3be51",
            "arn_suffix": "targetgroup/Mahesh11907444/c32ba3d60be3be51",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:815057191380:targetgroup/Mahesh11907444/c32ba3d60be3be51",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Mahesh11907444",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bb6adfe80f639d56"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-elb-mahesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mahi-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815057191380:route-table/rtb-0e93f848a903f945f",
            "id": "rtb-0e93f848a903f945f",
            "owner_id": "815057191380",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04aa4eda9c57086f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mahesh(11907444)-Route to internet"
            },
            "tags_all": {
              "Name": "Mahesh(11907444)-Route to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb6adfe80f639d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mahesh-Internet-gateway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mahesh-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dfbaea5dc853142",
            "route_table_id": "rtb-0e93f848a903f945f",
            "subnet_id": "subnet-0f9dd9aa57078ea75"
          },
          "dependencies": [
            "aws_internet_gateway.mahesh-Internet-gateway",
            "aws_route_table.mahi-route",
            "aws_subnet.pub-sub1-mahesh",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mahesh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815057191380:security-group/sg-0747381e123ddd9d8",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0747381e123ddd9d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Mahesh(11907444) Database SG",
            "name_prefix": "",
            "owner_id": "815057191380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mahesh11907444"
            },
            "tags_all": {
              "Name": "Mahesh11907444"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb6adfe80f639d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub1-mahesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815057191380:subnet/subnet-0f9dd9aa57078ea75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9dd9aa57078ea75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "815057191380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mahesh(11907444) Web Subnet 1"
            },
            "tags_all": {
              "Name": "Mahesh(11907444) Web Subnet 1"
            },
            "vpc_id": "vpc-0bb6adfe80f639d56"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub2-mahesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815057191380:subnet/subnet-0ec8bbbce9871a3cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec8bbbce9871a3cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "815057191380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mahesh(11907444) Web Subnet 2"
            },
            "tags_all": {
              "Name": "Mahesh(11907444) Web Subnet 2"
            },
            "vpc_id": "vpc-0bb6adfe80f639d56"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815057191380:vpc/vpc-0bb6adfe80f639d56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0c6a8f8cb89fc83",
            "default_route_table_id": "rtb-0803ae872a41d5843",
            "default_security_group_id": "sg-095715ee06864d9a6",
            "dhcp_options_id": "dopt-00f2c5e00bad6c88b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb6adfe80f639d56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0803ae872a41d5843",
            "owner_id": "815057191380",
            "tags": {
              "Name": "Mahesh(11907444) VPC"
            },
            "tags_all": {
              "Name": "Mahesh(11907444) VPC"
            }
          }
        }
      ]
    }
  ]
}